Main overflow fix

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -6,6 +6,7 @@
   display: flex;
 
   background: #fff;
+  overflow-x: hidden;
 
   &__scene {
     position: absolute;
